framec_tests/language_specific/c/v3_facade_smoke/negative/strict_invalid_native.frm
@target c

system S {
    machine:
        $A {
            e() {
                -> $B();
                int x = ;   // malformed native statement for strict facade
            }
        }
        $B {
        }
}

